deploy/yamls-parameterized/kustomize/base/testgary22-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: testgary22
    name: testgary22
spec:
    replicas: 2
    selector:
        matchLabels:
            move2kube.konveyor.io/service: testgary22
    strategy: {}
    template:
        metadata:
            creationTimestamp: null
            labels:
                move2kube.konveyor.io/service: testgary22
            name: testgary22
        spec:
            containers:
                - image: quay.io/7/testgary22:latest
                  imagePullPolicy: Always
                  name: testgary22
                  ports:
                    - containerPort: 8080
                  resources: {}
            restartPolicy: Always
            securityContext: {}
status: {}

...
