deploy/yamls-parameterized/kustomize/base/testgary22-service.yaml

---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: testgary22
    name: testgary22
spec:
    ports:
        - name: port-8080
          port: 8080
          targetPort: 8080
    selector:
        move2kube.konveyor.io/service: testgary22
    type: ClusterIP
status:
    loadBalancer: {}

...
